@@ -69,6 +69,7 @@ Changes Since 0.14
 * docutils/utils/__init__.py:
 
   - Deprecate `unique_combinations` (obsoleted by `itertools.combinations`).
+  - New function `unescape_rawsource`.
 
 
 Release 0.14 (2017-08-03)
